force-app/main/default/objects/Order/fields/JobExceptionMessage__c.field-meta.xml
<CustomField>
    <fullName>JobExceptionMessage__c</fullName>
    <label>Post Process</label>
    <type>TextArea</type>
</CustomField>