force-app/main/default/objects/Order/fields/JobExceptionType__c.field-meta.xml
<CustomField>
    <fullName>JobExceptionType__c</fullName>
    <label>Post Process</label>
    <type>Text</type>
    <length>255</length>
</CustomField>