force-app/main/default/objects/Order/fields/PostProcess__c.field-meta.xml
<CustomField>
    <fullName>PostProcess__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Post Process</label>
    <type>Checkbox</type>
</CustomField>